--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
        <div class = "hero-contents">
 
             <div class = "nav-bar">
-                <a class = "logo" href = "#">EUR♡MATE</a>
+                <a class = "logo" href = "https://napjak.github.io/Main/">EUR♡MATE</a>
         
                 <ul class = "category">
                     <li><a href = "#">브랜드소개</a></li>
-                    <li><a href = "../Reservation/reservation.html">소그룹 유럽여행</a></li>
+                    <li><a href = "https://napjak.github.io/reserve/">소그룹 유럽여행</a></li>
                     <li><a href = "#">패키지 여행 큐레이션</a></li>
                     <li><a href = "#">유럽 여행 정보</a></li>
                     <li><a href = "#">고객지원</a></li>
@@ -89,14 +89,14 @@
 
         <div class = "section1-img">
             <div class = "section1-img-left">
-                <a class = "image1" href = "../Reservation/reservation.html"><img src = "section1-img1.png"></a>
+                <a class = "image1" href = "https://napjak.github.io/reserve/"><img src = "section1-img1.png"></a>
             </div>
 
             <div class = "section1-img-right">
-                <a class = "image2" href = "../Reservation/reservation.html"><img src = "section1-img2.png"></a>
-                <a class = "image3" href = "../Reservation/reservation.html"><img src = "section1-img3.png"></a>
-                <a class = "image4" href = "../Reservation/reservation.html"><img src = "section1-img4.png"></a>
-                <a class = "image5" href = "../Reservation/reservation.html"><img src = "section1-img5.png"></a>
+                <a class = "image2" href = "https://napjak.github.io/reserve/"><img src = "section1-img2.png"></a>
+                <a class = "image3" href = "https://napjak.github.io/reserve/"><img src = "section1-img3.png"></a>
+                <a class = "image4" href = "https://napjak.github.io/reserve/"><img src = "section1-img4.png"></a>
+                <a class = "image5" href = "https://napjak.github.io/reserve/"><img src = "section1-img5.png"></a>
             </div>
         </div>
 
